package board;

public enum BuildingType {
    SETTLEMENT, CITY;
}
