package board;

public enum PortType {
    WOOD, WHEAT, ORE, SHEEP, BRICK, THREE_FOR_ONE;
}
