package game;

public enum DevCardType {
    KNIGHT,
    ROAD_BUILDING,
    YEAR_OF_PLENTY,
    MONOPOLY,
    VICTORY_POINT
}
