package game;

public enum GameState {
    SETUP,
    NORMALPLAY,
    END
}
