package game;

public enum Resource {
    WOOD,
    BRICK,
    WHEAT,
    SHEEP,
    ORE;
}
